--- a/Projet-phpsql-main/styles/styles.scss
+++ b/Projet-phpsql-main/styles/styles.scss
@@ -258,6 +258,7 @@ section {
             color: var(--color-grey-1);
         }
         h4 {
+            display: flex;
             font-size: 2rem;
             text-transform: uppercase;
         }
@@ -359,6 +360,11 @@ section {
             text-transform: uppercase;
             font-weight: 500;
         }
+
+        h4 {
+            display: inline;
+        }
+
         h5 {
             padding: 1rem 0;
             text-transform: uppercase;
